ensure "engines" is set in package.json

--- a/package.json
+++ b/package.json
@@ -24,13 +24,20 @@
     "execa": "0.4.0",
     "figures": "1.7.0",
     "graceful-fs": "4.1.4",
+    "load-json-file": "2.0.0",
     "meow": "3.7.0",
     "pify": "2.3.0",
+    "semver": "5.1.0",
     "through2": "2.0.1",
-    "vinyl-fs": "2.4.3"
+    "vinyl-fs": "2.4.3",
+    "write-json-file": "2.0.0"
   },
   "devDependencies": {},
   "directories": {
     "test": "test"
+  },
+  "engines": {
+    "node": ">=6",
+    "npm": ">=3"
   }
 }
