--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "node-init": "bin/index.js"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "eslint": "eslint --fix --cache ."
   },
   "repository": {
     "type": "git",
@@ -32,7 +32,12 @@
     "vinyl-fs": "2.4.3",
     "write-json-file": "2.0.0"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "eslint": "2.11.1",
+    "eslint-config-standard": "5.3.1",
+    "eslint-plugin-promise": "1.3.2",
+    "eslint-plugin-standard": "1.3.2"
+  },
   "directories": {
     "test": "test"
   },
