--- a/package.json
+++ b/package.json
@@ -33,10 +33,10 @@
     "write-json-file": "2.0.0"
   },
   "devDependencies": {
-    "eslint": "2.11.1",
-    "eslint-config-standard": "5.3.1",
-    "eslint-plugin-promise": "1.3.2",
-    "eslint-plugin-standard": "1.3.2"
+    "eslint": "^2.11.1",
+    "eslint-config-standard": "^5.3.1",
+    "eslint-plugin-promise": "^1.3.2",
+    "eslint-plugin-standard": "^1.3.2"
   },
   "directories": {
     "test": "test"
