--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "execa": "0.4.0",
     "figures": "1.7.0",
     "graceful-fs": "4.1.4",
+    "ini": "1.3.4",
     "load-json-file": "2.0.0",
     "meow": "3.7.0",
     "pify": "2.3.0",
