--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "pify": "2.3.0",
     "semver": "5.1.0",
     "through2": "2.0.1",
+    "update-notifier": "0.7.0",
     "vinyl-fs": "2.4.3",
     "write-json-file": "2.0.0"
   },
