--- a/package.json
+++ b/package.json
@@ -23,11 +23,13 @@
     "write-json-file": "2.0.0"
   },
   "devDependencies": {
+    "ava": "^0.15.2",
     "eslint": "^2.11.1",
     "eslint-config-standard": "^5.3.1",
     "eslint-plugin-promise": "^1.3.2",
     "eslint-plugin-standard": "^1.3.2",
-    "fixpack": "^2.3.1"
+    "fixpack": "^2.3.1",
+    "nyc": "^6.4.4"
   },
   "directories": {
     "test": "test"
@@ -45,8 +47,12 @@
     "url": "git+https://github.com/jokeyrhyme/node-init.git"
   },
   "scripts": {
+    "ava": "nyc ava",
     "eslint": "eslint --fix --cache .",
-    "fixpack": "fixpack"
+    "fixpack": "fixpack",
+    "nyc": "nyc check-coverage --branches 90 --functions 90 --lines 90 --statements 90",
+    "posttest": "npm run eslint && npm run fixpack",
+    "test": "npm run ava && npm run nyc"
   },
   "author": ""
 }
