--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "eslint-config-standard": "^5.3.1",
     "eslint-plugin-promise": "^1.3.2",
     "eslint-plugin-standard": "^1.3.2",
-    "fixpack": "2.3.1",
+    "fixpack": "^2.3.1",
     "nyc": "^6.4.4"
   },
   "directories": {
