--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "figures": "1.7.0",
     "graceful-fs": "4.1.4",
     "ini": "1.3.4",
+    "js-yaml": "3.6.1",
     "load-json-file": "2.0.0",
     "meow": "3.7.0",
     "pify": "2.3.0",
@@ -42,6 +43,9 @@
   "keywords": [],
   "license": "BSD-2-Clause",
   "main": "index.js",
+  "publishConfig": {
+    "access": "public"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/jokeyrhyme/node-init.git"
@@ -53,9 +57,5 @@
     "nyc": "nyc check-coverage --branches 90 --functions 90 --lines 90 --statements 90",
     "posttest": "npm run eslint && npm run fixpack",
     "test": "npm run ava && npm run nyc"
-  },
-  "author": "",
-  "publishConfig": {
-    "access": "public"
   }
 }
