fix Travis CI badge SVG URL

--- a/package.json
+++ b/package.json
@@ -57,5 +57,6 @@
     "nyc": "nyc check-coverage --branches 90 --functions 90 --lines 90 --statements 90",
     "posttest": "npm run eslint && npm run fixpack",
     "test": "npm run ava && npm run nyc"
-  }
+  },
+  "author": ""
 }
