--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "eslint-plugin-promise": "^1.3.2",
     "eslint-plugin-standard": "^1.3.2",
     "fixpack": "^2.3.1",
+    "greenkeeper-postpublish": "^1.0.0",
     "nyc": "^6.4.4"
   },
   "directories": {
@@ -56,7 +57,8 @@
     "fixpack": "fixpack",
     "nyc": "nyc check-coverage --branches 90 --functions 90 --lines 90 --statements 90",
     "posttest": "npm run eslint && npm run fixpack",
-    "test": "npm run ava && npm run nyc"
+    "test": "npm run ava && npm run nyc",
+    "postpublish": "greenkeeper-postpublish"
   },
   "author": ""
 }
