--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "ini": "1.3.4",
     "js-yaml": "3.6.1",
     "load-json-file": "2.0.0",
+    "lodash.without": "4.2.0",
     "meow": "3.7.0",
     "pify": "2.3.0",
     "semver": "5.1.0",
@@ -56,9 +57,9 @@
     "eslint": "eslint --fix --cache .",
     "fixpack": "fixpack",
     "nyc": "nyc check-coverage --branches 90 --functions 90 --lines 90 --statements 90",
+    "postpublish": "greenkeeper-postpublish",
     "posttest": "npm run eslint && npm run fixpack",
-    "test": "npm run ava && npm run nyc",
-    "postpublish": "greenkeeper-postpublish"
+    "test": "npm run ava && npm run nyc"
   },
   "author": ""
 }
