--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "ini": "1.3.4",
     "js-yaml": "3.6.1",
     "load-json-file": "2.0.0",
+    "lodash.union": "4.4.0",
     "lodash.without": "4.2.0",
     "meow": "3.7.0",
     "pify": "2.3.0",
