--- a/package.json
+++ b/package.json
@@ -11,29 +11,29 @@
   "dependencies": {
     "execa": "0.4.0",
     "figures": "1.7.0",
-    "graceful-fs": "4.1.4",
+    "graceful-fs": "*",
     "ini": "1.3.4",
     "js-yaml": "3.6.1",
     "load-json-file": "2.0.0",
-    "lodash.union": "4.4.0",
-    "lodash.without": "4.2.0",
+    "lodash.union": "^4.5.0",
+    "lodash.without": "^4.3.0",
     "meow": "3.7.0",
     "pify": "2.3.0",
-    "semver": "5.1.0",
+    "semver": "^5.3.0",
     "through2": "2.0.1",
-    "update-notifier": "1.0.0",
+    "update-notifier": "^1.0.2",
     "vinyl-fs": "2.4.3",
     "write-json-file": "2.0.0"
   },
   "devDependencies": {
     "ava": "^0.15.2",
-    "eslint": "^2.11.1",
-    "eslint-config-standard": "^5.3.1",
-    "eslint-plugin-promise": "^1.3.2",
-    "eslint-plugin-standard": "^1.3.2",
+    "eslint": "^3.2.2",
+    "eslint-config-standard": "^5.3.5",
+    "eslint-plugin-promise": "^2.0.0",
+    "eslint-plugin-standard": "^2.0.0",
     "fixpack": "^2.3.1",
     "greenkeeper-postpublish": "^1.0.0",
-    "nyc": "^6.4.4"
+    "nyc": "^7.1.0"
   },
   "directories": {
     "test": "test"
@@ -61,6 +61,5 @@
     "postpublish": "greenkeeper-postpublish",
     "posttest": "npm run eslint && npm run fixpack",
     "test": "npm run ava && npm run nyc"
-  },
-  "author": ""
+  }
 }
