--- a/package.json
+++ b/package.json
@@ -12,12 +12,12 @@
     "execa": "0.4.0",
     "figures": "1.7.0",
     "graceful-fs": "*",
-    "ini": "1.3.4",
     "js-yaml": "3.6.1",
     "load-json-file": "2.0.0",
     "lodash.union": "^4.5.0",
     "lodash.without": "^4.3.0",
     "meow": "3.7.0",
+    "node-fetch": "1.6.0",
     "pify": "2.3.0",
     "semver": "^5.3.0",
     "through2": "2.0.1",
@@ -61,5 +61,6 @@
     "postpublish": "greenkeeper-postpublish",
     "posttest": "npm run eslint && npm run fixpack",
     "test": "npm run ava && npm run nyc"
-  }
+  },
+  "author": ""
 }
