--- a/.editorconfig
+++ b/.editorconfig
@@ -20,6 +20,14 @@ indent_size = 2
 indent_style = space
 trim_trailing_whitespace = true
 
+# CSS
+# https://google.github.io/styleguide/htmlcssguide.xml#General_Formatting_Rules
+# http://cssguidelin.es/#syntax-and-formatting
+[*.css]
+indent_size = 2
+indent_style = space
+trim_trailing_whitespace = true
+
 # GNU make
 # https://www.gnu.org/software/make/manual/html_node/Recipe-Syntax.html
 [Makefile]
@@ -30,15 +38,28 @@ indent_style = tab
 [*.go]
 indent_style = tab
 
+# HTML
+# https://google.github.io/styleguide/htmlcssguide.xml#General_Formatting_Rules
+[*.{htm,html}]
+indent_size = 2
+indent_style = space
+trim_trailing_whitespace = true
+
 # Java
 # https://google.github.io/styleguide/javaguide.html#s4.2-block-indentation
 [*.java]
 indent_size = 2
 indent_style = space
 
-# JavaScript
+# JavaScript, JSON, JSX
 # https://github.com/feross/standard
 [*.{js,json,jsx}]
+indent_size = 2
+indent_style = space
+
+# LESS
+# https://github.com/less/less-docs#less-standards
+[*.less]
 indent_size = 2
 indent_style = space
 
@@ -67,6 +88,19 @@ indent_size = 4
 indent_style = space
 insert_final_newline = false
 trim_trailing_whitespace = true
+
+# SASS
+# https://sass-guidelin.es/#syntax--formatting
+[*.{sass,scss}]
+indent_size = 2
+indent_style = space
+
+# TypeScript
+# https://github.com/Microsoft/TypeScript/wiki/Coding-guidelines#style
+# https://github.com/Microsoft/TypeScript/blob/master/.editorconfig
+[*.ts]
+indent_style = space
+indent_size = 4
 
 # YAML
 # http://yaml.org/spec/1.2/2009-07-21/spec.html#id2576668
