--- a/appveyor.yml
+++ b/appveyor.yml
@@ -2,6 +2,7 @@ build: 'off'
 environment:
   matrix:
     - nodejs_version: '6'
+    - nodejs_version: '7'
 install:
   - ps: 'Install-Product node $env:nodejs_version'
   - npm install
