--- a/appveyor.yml
+++ b/appveyor.yml
@@ -4,10 +4,9 @@ environment:
     - nodejs_version: '6'
     - nodejs_version: '7'
 install:
-  - ps: 'Install-Product node $env:nodejs_version'
+  - ps: 'Install-Product node $env:nodejs_version x64'
   - npm install
 test_script:
   - node --version
   - npm --version
-  - npm cache clean
   - npm test
