--- a/package.json
+++ b/package.json
@@ -21,9 +21,11 @@
     "lodash.without": "^4.3.0",
     "meow": "3.7.0",
     "node-fetch": "1.6.3",
+    "package-engines-notifier": "1.0.0",
     "semver": "^5.3.0",
     "through2": "2.0.1",
-    "update-notifier": "^1.0.2",
+    "update-nodejs-notifier": "1.0.1",
+    "update-notifier": "1.0.2",
     "vinyl-fs": "2.4.4",
     "write-json-file": "2.0.0"
   },
