re-run @jokeyrhyme/node-init on itself

--- a/.travis.yml
+++ b/.travis.yml
@@ -15,3 +15,9 @@ cache:
 node_js:
   - '6'
   - '7'
+install:
+  - npm install --global npm
+  - npm install --global flow-typed
+  - npm install --global typings
+  - npm install --global yarn
+  - npm install
