--- a/appveyor.yml
+++ b/appveyor.yml
@@ -5,6 +5,10 @@ environment:
     - nodejs_version: '7'
 install:
   - ps: 'Install-Product node $env:nodejs_version x64'
+  - npm install --global npm
+  - npm install --global flow-typed
+  - npm install --global typings
+  - npm install --global yarn
   - npm install
 test_script:
   - node --version
