--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "lodash.without": "^4.3.0",
     "meow": "3.7.0",
     "node-fetch": "1.6.3",
+    "p-memoize": "1.0.0",
     "package-engines-notifier": "1.1.0",
+    "read-pkg-up": "2.0.0",
     "semver": "^5.3.0",
     "through2": "2.0.1",
     "update-nodejs-notifier": "1.1.0",
