--- a/package.json
+++ b/package.json
@@ -66,7 +66,7 @@
     "eslint": "eslint --fix --cache .",
     "fixpack": "fixpack",
     "flow_check": "flow check",
-    "nyc": "nyc check-coverage",
+    "nyc": "nyc check-coverage --lines 40",
     "postpublish": "greenkeeper-postpublish",
     "posttest": "npm run eslint && npm run flow_check && npm run fixpack",
     "test": "npm run ava && npm run nyc"
