--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "idempotent-fs": "1.2.0",
     "js-yaml": "3.7.0",
     "load-json-file": "2.0.0",
+    "lodash.intersection": "4.4.0",
     "lodash.union": "^4.5.0",
     "lodash.without": "^4.3.0",
     "meow": "3.7.0",
