use eslint-plugin-ava for our own tests

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,10 +1,12 @@
 {
   "extends": [
     "eslint:recommended",
+    "plugin:ava/recommended",
     "plugin:node/recommended",
     "standard"
   ],
   "plugins": [
+    "ava",
     "node"
   ]
 }
