--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "read-pkg-up": "2.0.0",
     "semver": "^5.3.0",
     "through2": "2.0.3",
+    "update-json-file": "^1.1.1",
     "update-nodejs-notifier": "1.1.0",
     "update-notifier": "1.0.3",
     "vinyl-fs": "2.4.4",
