--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,9 +1,9 @@
 {
   "extends": [
     "eslint:recommended",
-    "plugin:ava/recommended",
     "plugin:node/recommended",
-    "standard"
+    "standard",
+    "plugin:ava/recommended"
   ],
   "plugins": [
     "ava",
