--- a/package.json
+++ b/package.json
@@ -44,7 +44,9 @@
     "eslint-plugin-standard": "^2.0.1",
     "fixpack": "^2.3.1",
     "flow-bin": "^0.41.0",
-    "nyc": "^10.0.0"
+    "nyc": "^10.0.0",
+    "pify": "^2.3.0",
+    "rimraf": "^2.6.1"
   },
   "directories": {
     "test": "test"
@@ -69,7 +71,7 @@
     "eslint": "eslint --fix --cache .",
     "fixpack": "fixpack",
     "flow_check": "flow check",
-    "nyc": "nyc check-coverage --lines 40",
+    "nyc": "nyc check-coverage --lines 45",
     "posttest": "npm run eslint && npm run flow_check && npm run fixpack",
     "test": "npm run ava && npm run nyc"
   }
