--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@jokeyrhyme/pify-fs": "^1.0.1",
     "chalk": "1.1.3",
+    "detect-flowtype": "1.0.0",
     "execa": "0.6.3",
     "figures": "2.0.0",
     "graceful-fs": "4.1.11",
