--- a/package.json
+++ b/package.json
@@ -41,12 +41,13 @@
   },
   "devDependencies": {
     "ava": "^0.18.1",
-    "eslint": "^3.8.1",
-    "eslint-config-standard": "^8.0.0",
+    "eslint": "^3.19.0",
+    "eslint-config-standard": "^10.0.0",
     "eslint-plugin-ava": "^4.0.0",
-    "eslint-plugin-node": "^4.0.0",
-    "eslint-plugin-promise": "^3.3.0",
-    "eslint-plugin-standard": "^2.0.1",
+    "eslint-plugin-import": "^2.2.0",
+    "eslint-plugin-node": "^4.2.2",
+    "eslint-plugin-promise": "^3.5.0",
+    "eslint-plugin-standard": "^2.2.0",
     "fixpack": "^2.3.1",
     "flow-bin": "^0.43.0",
     "nyc": "^10.0.0"
