extract npm-test task into separate tasks

--- a/package.json
+++ b/package.json
@@ -77,7 +77,7 @@
     "nyc": "nyc check-coverage --lines 45",
     "posttest": "npm run eslint && npm run flow_check",
     "pretest": "npm run fixpack && npm run prettier",
-    "test": "npm run ava && npm run nyc",
-    "prettier": "prettier --single-quote --write \"{,!(build|coverage|dist|node_modules)/**/}*.js\""
+    "prettier": "prettier --single-quote --write \"{,!(build|coverage|dist|node_modules)/**/}*.js\"",
+    "test": "npm run ava && npm run nyc"
   }
 }
