--- a/package.json
+++ b/package.json
@@ -75,8 +75,8 @@
     "fixpack": "fixpack",
     "flow_check": "flow check",
     "nyc": "nyc check-coverage --lines 45",
-    "posttest": "npm run eslint && npm run flow_check",
-    "pretest": "npm run fixpack && npm run prettier",
+    "posttest": "npm run flow_check",
+    "pretest": "npm run fixpack && npm run prettier && npm run eslint",
     "prettier": "prettier --single-quote --write \"{,!(build|coverage|dist|node_modules)/**/}*.js\"",
     "test": "npm run ava && npm run nyc"
   }
