--- a/package.json
+++ b/package.json
@@ -49,9 +49,10 @@
     "fixpack": "^2.3.1",
     "flow-bin": "^0.47.0",
     "nyc": "^11.0.1",
-    "prettier": "^1.2.2"
+    "prettier": "^1.4.1"
   },
   "directories": {
+    "lib": "lib",
     "test": "test"
   },
   "engines": {
@@ -77,7 +78,7 @@
     "nyc": "nyc check-coverage --lines 45",
     "posttest": "npm run flow_check",
     "pretest": "npm run fixpack && npm run prettier && npm run eslint",
-    "prettier": "prettier --single-quote --write \"{,!(build|coverage|dist|node_modules)/**/}*.js\"",
+    "prettier": "prettier --list-different --single-quote --write \"{,!(build|coverage|dist|vendor)/**/}*.{css|js|jsx|less|scss|ts|tsx}\"",
     "test": "npm run ava && npm run nyc"
   }
 }
