--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "lodash.without": "^4.3.0",
     "log-update": "2.0.0",
     "meow": "3.7.0",
-    "node-fetch": "1.7.1",
+    "node-fetch": "^1.7.1",
     "p-memoize": "1.0.0",
     "package-engines-notifier": "1.1.0",
     "pify": "3.0.0",
@@ -49,7 +49,7 @@
     "fixpack": "^2.3.1",
     "flow-bin": "^0.47.0",
     "nyc": "^11.0.1",
-    "prettier": "^1.4.1"
+    "prettier": "^1.4.2"
   },
   "directories": {
     "lib": "lib",
