ci: install `yarn` only when eneded (fixes #148)

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "execa": "0.7.0",
     "figures": "2.0.0",
     "graceful-fs": "4.1.11",
+    "has-yarn": "1.0.0",
     "idempotent-fs": "1.2.0",
     "js-yaml": "3.8.4",
     "load-json-file": "2.0.0",
@@ -75,7 +76,7 @@
     "eslint": "eslint --fix --cache .",
     "fixpack": "fixpack",
     "flow_check": "flow check",
-    "nyc": "nyc check-coverage --lines 45",
+    "nyc": "nyc check-coverage --lines 50",
     "posttest": "npm run flow_check",
     "pretest": "npm run fixpack && npm run prettier && npm run eslint",
     "prettier": "prettier --list-different --single-quote --write \"{,!(build|coverage|dist|vendor)/**/}*.{css,js,jsx,less,scss,ts,tsx}\" || exit 0",
