--- a/package.json
+++ b/package.json
@@ -49,8 +49,9 @@
     "eslint-plugin-promise": "^3.5.0",
     "fixpack": "^2.3.1",
     "flow-bin": "^0.51.0",
+    "npx": "*",
     "nyc": "^11.1.0",
-    "prettier": "^1.4.4"
+    "prettier": "^1.5.3"
   },
   "directories": {
     "lib": "lib",
@@ -76,10 +77,11 @@
     "eslint": "eslint --fix --cache .",
     "fixpack": "fixpack",
     "flow_check": "flow check",
+    "nsp": "npx nsp check",
     "nyc": "nyc check-coverage --lines 50",
     "posttest": "npm run flow_check",
     "pretest": "npm run fixpack && npm run prettier && npm run eslint",
     "prettier": "prettier --list-different --single-quote --write \"{,!(build|coverage|dist|flow-typed|typings|vendor)/**/}*.{css,js,jsx,less,scss,ts,tsx}\" || exit 0",
-    "test": "npm run ava && npm run nyc"
+    "test": "npm run ava && npm run nyc && npm run nsp"
   }
 }
