--- a/.flowconfig
+++ b/.flowconfig
@@ -4,8 +4,9 @@
 <PROJECT_ROOT>/coverage/.*
 <PROJECT_ROOT>/dist/.*
 <PROJECT_ROOT>/node_modules/babel.*
-<PROJECT_ROOT>/node_modules/y18n/test/.*
 <PROJECT_ROOT>/node_modules/\.cache/.*
+<PROJECT_ROOT>/node_modules/.*/test/.*
+<PROJECT_ROOT>/node_modules/.*/tests/.*
 
 [options]
 suppress_comment= \\(.\\|\n\\)*\\$FlowFixMe
