--- a/package.json
+++ b/package.json
@@ -24,13 +24,12 @@
   "scripts": {
     "ava": "nyc ava",
     "eslint": "eslint --fix --cache .",
-    "flow_check": "flow check",
+    "flow": "npx -q flow-bin@^0.51.1 check",
     "nsp": "npx -q nsp check",
     "nyc": "nyc check-coverage --lines 50",
     "sort-package-json": "npx -q sort-package-json",
     "pretest": "npm run prettier && npm run eslint && npm run sort-package-json",
-    "test": "npm run ava && npm run nyc && npm run nsp",
-    "posttest": "npm run flow_check",
+    "test": "npm run ava && npm run nyc && npm run nsp && npm run flow",
     "prettier": "npx -q prettier --list-different --single-quote --write \"{,!(build|coverage|dist|flow-typed|typings|vendor)/**/}*.{css,js,jsx,less,scss,ts,tsx}\" || exit 0"
   },
   "dependencies": {
@@ -43,6 +42,7 @@
     "has-yarn": "1.0.0",
     "idempotent-fs": "1.2.0",
     "js-yaml": "3.9.1",
+    "latest-version": "^3.1.0",
     "load-json-file": "2.0.0",
     "locate-path": "^2.0.0",
     "lodash.intersection": "4.4.0",
@@ -71,7 +71,6 @@
     "eslint-plugin-import": "^2.2.0",
     "eslint-plugin-node": "^5.0.0",
     "eslint-plugin-promise": "^3.5.0",
-    "flow-bin": "^0.51.0",
     "npx": "*",
     "nyc": "^11.1.0"
   },
