--- a/package.json
+++ b/package.json
@@ -56,7 +56,7 @@
     "pify": "3.0.0",
     "read-pkg-up": "2.0.0",
     "rimraf": "2.6.1",
-    "semver": "^5.3.0",
+    "semver": "^5.4.1",
     "through2": "2.0.3",
     "update-json-file": "^1.1.1",
     "update-nodejs-notifier": "1.1.1",
@@ -71,7 +71,7 @@
     "eslint-plugin-import": "^2.2.0",
     "eslint-plugin-node": "^5.0.0",
     "eslint-plugin-promise": "^3.5.0",
-    "npx": "*",
+    "npx": "^9.5.0",
     "nyc": "^11.1.0"
   },
   "engines": {
