--- a/package.json
+++ b/package.json
@@ -23,11 +23,12 @@
   },
   "scripts": {
     "eslint": "eslint --fix --cache .",
-    "flow": "npx -q flow-bin@^0.51.1 check",
+    "flow": "npx -q flow-bin@^0.54.1 check",
+    "jest": "jest",
     "nsp": "npx -q nsp check",
     "sort-package-json": "npx -q sort-package-json",
     "pretest": "npm run prettier && npm run eslint && npm run sort-package-json",
-    "test": "npm run nsp && npm run flow",
+    "test": "npm run jest && npm run nsp && npm run flow",
     "prettier": "npx -q prettier --list-different --single-quote --write \"{,!(build|coverage|dist|flow-typed|typings|vendor)/**/}*.{css,js,jsx,less,scss,ts,tsx}\" || exit 0"
   },
   "dependencies": {
@@ -68,6 +69,7 @@
     "eslint-plugin-import": "^2.2.0",
     "eslint-plugin-node": "^5.0.0",
     "eslint-plugin-promise": "^3.5.0",
+    "jest": "^21.0.2",
     "npx": "^9.5.0"
   },
   "engines": {
@@ -76,5 +78,13 @@
   },
   "publishConfig": {
     "access": "public"
+  },
+  "jest": {
+    "collectCoverage": true,
+    "coverageThreshold": {
+      "global": {
+        "lines": 55
+      }
+    }
   }
 }
