MINOR: move .eslintignore into package.json

--- a/package.json
+++ b/package.json
@@ -77,6 +77,12 @@
   "publishConfig": {
     "access": "public"
   },
+  "eslintIgnore": [
+    "build",
+    "coverage",
+    "dist",
+    "flow-typed"
+  ],
   "jest": {
     "collectCoverage": true,
     "coverageThreshold": {
