--- a/.editorconfig
+++ b/.editorconfig
@@ -51,10 +51,16 @@ trim_trailing_whitespace = true
 indent_size = 2
 indent_style = space
 
-# JavaScript, JSON, JSX
+# JavaScript, JSON, JSX, JavaScript Modules
 # https://github.com/feross/standard
-[*.{js,json,jsx}]
+[*.{js,json,jsx,mjs}]
 indent_size = 2
+indent_style = space
+
+# Kotlin
+# https://android.github.io/kotlin-guides/style.html#indentation
+[*.{kt,kts}]
+indent_size = 4
 indent_style = space
 
 # LESS
@@ -98,6 +104,12 @@ indent_style = space
 # Shell
 # https://google.github.io/styleguide/shell.xml#Indentation
 [*.{bash,sh,zsh}]
+indent_size = 2
+indent_style = space
+
+# TOML
+# https://github.com/toml-lang/toml/tree/master/examples
+[*.toml]
 indent_size = 2
 indent_style = space
 
