--- a/package.json
+++ b/package.json
@@ -24,22 +24,19 @@
     "eslint": "eslint --fix --cache .",
     "flow": "npx -q flow-bin@^0.73.0 check",
     "jest": "jest",
+    "nsp": "npx -q nsp check",
     "sort-package-json": "npx -q sort-package-json",
-    "pretest": "npm run prettier && npm run eslint && npm run sort-package-json",
-    "test": "npm run jest && npm audit && npm run flow && npm run nsp",
-    "prettier": "npx -q prettier --list-different --write \"**/*.{css,js,json,jsx,md,less,scss,ts,tsx}\" || exit 0",
-    "nsp": "npx -q nsp check"
+    "pretest":
+      "npm run prettier && npm run eslint && npm run sort-package-json",
+    "test": "npm run jest && npm run flow && npm run nsp",
+    "prettier":
+      "npx -q prettier --list-different --write \"**/*.{css,js,json,jsx,md,less,scss,ts,tsx}\" || exit 0"
   },
   "prettier": {
     "singleQuote": true,
     "trailingComma": "all"
   },
-  "eslintIgnore": [
-    "build",
-    "coverage",
-    "dist",
-    "flow-typed"
-  ],
+  "eslintIgnore": ["build", "coverage", "dist", "flow-typed"],
   "jest": {
     "collectCoverage": true,
     "coverageThreshold": {
