--- a/package.json
+++ b/package.json
@@ -26,17 +26,20 @@
     "jest": "jest",
     "nsp": "npx -q nsp check",
     "sort-package-json": "npx -q sort-package-json",
-    "pretest":
-      "npm run prettier && npm run eslint && npm run sort-package-json",
+    "pretest": "npm run prettier && npm run eslint && npm run sort-package-json",
     "test": "npm run jest && npm run flow && npm run nsp",
-    "prettier":
-      "npx -q prettier --list-different --write \"**/*.{css,js,json,jsx,md,less,scss,ts,tsx}\" || exit 0"
+    "prettier": "npx -q prettier --loglevel=warn --write \"**/*.{css,js,json,jsx,md,less,scss,ts,tsx}\""
   },
   "prettier": {
     "singleQuote": true,
     "trailingComma": "all"
   },
-  "eslintIgnore": ["build", "coverage", "dist", "flow-typed"],
+  "eslintIgnore": [
+    "build",
+    "coverage",
+    "dist",
+    "flow-typed"
+  ],
   "jest": {
     "collectCoverage": true,
     "coverageThreshold": {
