--- a/package.json
+++ b/package.json
@@ -21,12 +21,15 @@
     "lib": "lib"
   },
   "scripts": {
-    "eslint": "eslint --fix --cache .",
+    "eslint": "eslint --cache --fix .",
     "flow": "flow check",
+    "fmt": "npm run sort-package-json && npm run prettier && npm run fmt:eslint",
+    "fmt:eslint": "eslint --fix --no-eslintrc --parser-options \"ecmaVersion:2018,ecmaFeatures:{jsx:true}\" --rule \"key-spacing:[error,{align:value}]\" .",
     "jest": "jest",
+    "lint": "npm run eslint && npm run flow",
     "sort-package-json": "npx -q sort-package-json",
-    "pretest": "npm run prettier && npm run eslint && npm run sort-package-json",
-    "test": "npm run jest && npm run flow && npm audit",
+    "pretest": "npm run fmt",
+    "test": "npm run jest && npm audit && npm run lint",
     "prettier": "npx -q prettier --loglevel=warn --write \"**/*.{css,js,json,jsx,md,less,scss,ts,tsx}\""
   },
   "prettier": {
