--- a/package.json
+++ b/package.json
@@ -55,7 +55,7 @@
     "detect-flowtype": "2.0.0",
     "execa": "1.0.0",
     "figures": "2.0.0",
-    "graceful-fs": "4.1.12",
+    "graceful-fs": "^4.1.15",
     "has-yarn": "1.0.0",
     "idempotent-fs": "1.2.0",
     "js-yaml": "3.12.0",
@@ -67,7 +67,7 @@
     "lodash.union": "^4.5.0",
     "lodash.without": "^4.3.0",
     "log-update": "2.3.0",
-    "meow": "4.0.1",
+    "meow": "^5.0.0",
     "node-fetch": "^2.2.1",
     "p-memoize": "2.1.0",
     "package-engines-notifier": "1.1.0",
@@ -88,7 +88,7 @@
     "eslint-plugin-node": "^8.0.0",
     "eslint-plugin-promise": "^4.0.0",
     "flow-bin": "^0.86.0",
-    "jest": "^22.4.4"
+    "jest": "^23.6.0"
   },
   "engines": {
     "node": ">=10",
