--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,4 +1,11 @@
 {
-  "extends": ["eslint:recommended", "plugin:node/recommended"],
-  "plugins": ["node", "import", "promise"]
+  "extends": [
+    "eslint:recommended",
+    "plugin:node/recommended"
+  ],
+  "plugins": [
+    "node",
+    "import",
+    "promise"
+  ]
 }
