--- a/appveyor.yml
+++ b/appveyor.yml
@@ -3,6 +3,7 @@ environment:
   matrix:
     - nodejs_version: '8'
     - nodejs_version: '10'
+    - nodejs_version: '11'
 install:
   - ps: 'Install-Product node $env:nodejs_version x64'
   - npm install --global npm-windows-upgrade
