--- a/jsconfig.json
+++ b/jsconfig.json
@@ -3,5 +3,7 @@
     "target": "ES6",
     "allowSyntheticDefaultImports": true
   },
-  "exclude": ["node_modules"]
+  "exclude": [
+    "node_modules"
+  ]
 }
