--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,11 +1,4 @@
 {
-  "extends": [
-    "eslint:recommended",
-    "plugin:node/recommended"
-  ],
-  "plugins": [
-    "node",
-    "import",
-    "promise"
-  ]
+  "extends": ["eslint:recommended", "plugin:node/recommended"],
+  "plugins": ["node", "import", "promise"]
 }
