--- a/package.json
+++ b/package.json
@@ -27,10 +27,10 @@
     "fmt:eslint": "eslint --fix --no-eslintrc --parser-options \"ecmaVersion:2018,ecmaFeatures:{jsx:true}\" --rule \"key-spacing:[error,{align:value}]\" .",
     "jest": "jest",
     "lint": "npm run eslint && npm run flow",
+    "prettier": "npx -q prettier --loglevel=warn --write \"**/*.{css,js,json,jsx,md,less,scss,ts,tsx}\"",
     "sort-package-json": "npx -q sort-package-json",
     "pretest": "npm run fmt",
-    "test": "npm run jest && npm audit && npm run lint",
-    "prettier": "npx -q prettier --loglevel=warn --write \"**/*.{css,js,json,jsx,md,less,scss,ts,tsx}\""
+    "test": "npm run jest && npm audit && npm run lint"
   },
   "prettier": {
     "singleQuote": true,
