--- a/package.json
+++ b/package.json
@@ -23,12 +23,15 @@
   "scripts": {
     "eslint": "eslint --cache --fix .",
     "flow": "flow check",
-    "fmt": "npm run sort-package-json && npm run prettier && npm run fmt:eslint",
+    "fmt": "npm run sort-package-json && npm run prettier && npm run fmt:eslint && npm run fmt:tslint",
     "fmt:eslint": "eslint --fix --no-eslintrc --parser-options \"ecmaVersion:2018,ecmaFeatures:{jsx:true}\" --rule \"key-spacing:[error,{align:value}]\" .",
+    "fmt:tslint": "tslint --fix --config ./tslint-fmt.json --project ./tsconfig.json",
     "jest": "jest",
-    "lint": "npm run eslint && npm run flow",
+    "lint": "npm run eslint && npm run flow && npm run lint:tslint",
+    "lint:tslint": "tslint --fix --config ./tslint.json --project ./tsconfig.json",
     "prettier": "npx -q prettier --loglevel=warn --write \"**/*.{css,htm,html,js,json,jsx,md,less,scss,ts,tsx,vue}\"",
     "sort-package-json": "npx -q sort-package-json",
+    "start": "ts-node ./bin/index.js",
     "pretest": "npm run fmt",
     "test": "npm run jest && npm audit && npm run lint"
   },
@@ -88,7 +91,10 @@
     "eslint-plugin-node": "^8.0.1",
     "eslint-plugin-promise": "^4.0.0",
     "flow-bin": "^0.92.0",
-    "jest": "^24.1.0"
+    "jest": "^24.1.0",
+    "ts-node": "^8.0.2",
+    "tslint": "^5.12.1",
+    "typescript": "^3.3.3333"
   },
   "engines": {
     "node": ">=10",
