--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "lint:tslint": "tslint --fix --config ./tslint.json --project ./tsconfig.json",
     "prettier": "npx -q prettier --loglevel=warn --write \"**/*.{css,htm,html,js,json,jsx,md,less,scss,ts,tsx,vue}\"",
     "sort-package-json": "npx -q sort-package-json",
-    "start": "ts-node ./bin/index.js",
+    "start": "ts-node ./bin/index.ts",
     "pretest": "npm run fmt",
     "test": "npm run jest && npm audit && npm run lint"
   },
@@ -86,6 +86,9 @@
     "write-json-file": "3.1.0"
   },
   "devDependencies": {
+    "@jokeyrhyme/typescript-config": "^1.0.0",
+    "@types/meow": "^5.0.0",
+    "@types/node": "^11.9.4",
     "eslint": "^5.14.1",
     "eslint-plugin-import": "^2.16.0",
     "eslint-plugin-node": "^8.0.1",
