--- a/.travis.yml
+++ b/.travis.yml
@@ -14,3 +14,7 @@ node_js:
 install:
   - npm install --global npm
   - npm install
+script:
+  - npm test
+  - npm start -- --version
+  - node ./dist/bin/index.js --version
