--- a/appveyor.yml
+++ b/appveyor.yml
@@ -12,3 +12,5 @@ test_script:
   - node --version
   - npm --version
   - npm test
+  - npm start -- --version
+  - node ./dist/bin/index.js --version
