--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
   "bin": {
     "node-init": "bin/index.js"
   },
+  "directories": {
+    "lib": "lib"
+  },
   "scripts": {
     "eslint": "eslint --cache --fix .",
     "flow": "flow check",
@@ -28,7 +31,7 @@
     "fmt:eslint": "eslint --fix --no-eslintrc --parser-options \"ecmaVersion:2018,ecmaFeatures:{jsx:true}\" --rule \"key-spacing:[error,{align:value}]\" .",
     "jest": "jest",
     "lint": "npm run eslint && npm run flow",
-    "prettier": "npx -q prettier --loglevel=warn --write \"**/*.{css,htm,html,js,json,jsx,md,less,scss,ts,tsx,vue}\"",
+    "prettier": "npx -q prettier --loglevel=warn --write \"**/*.{cjs,css,htm,html,js,json,jsx,md,less,scss,ts,tsx,vue}\"",
     "sort-package-json": "npx -q sort-package-json",
     "start": "node ./bin/index.js",
     "pretest": "npm run fmt",
@@ -95,7 +98,7 @@
     "jest": "^24.1.0"
   },
   "engines": {
-    "node": ">=10",
+    "node": ">=12",
     "npm": ">=6"
   },
   "publishConfig": {
