--- a/.travis.yml
+++ b/.travis.yml
@@ -15,5 +15,4 @@ install:
   - npm install
 script:
   - npm test
-  - npm start -- --version
-  - node ./dist/bin/index.js --version
+  - ./bin/index.js --version
