--- a/appveyor.yml
+++ b/appveyor.yml
@@ -11,5 +11,4 @@ test_script:
   - node --version
   - npm --version
   - npm test
-  - npm start -- --version
-  - node ./dist/bin/index.js --version
+  - node ./bin/index.js --version
